--- a/css/login.css
+++ b/css/login.css
@@ -36,6 +36,7 @@
   text-align: center;
   padding-left: 20px;
   padding-right: 20px;
+  font-family: "Bebas Neue";
 }
 
 .input-box input::placeholder {
@@ -73,6 +74,7 @@
   font-size: 16px;
   color: black;
   font-weight: 600;
+  font-family: "Bebas Neue";
 }
 
 .wrapper .register-link {
