--- a/css/signup.css
+++ b/css/signup.css
@@ -16,7 +16,7 @@
   width: 315px;
   height: 630px;
   /* background-color: rgba(44, 27, 71, 0.2); */
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.428);
   animation: slideRightToLeft 1.7s forwards, fadeIn 1.7s forwards;
 }
 @keyframes slideRightToLeft {
@@ -122,13 +122,66 @@
   }
 }
 
-.divThreeStage {
+.form {
   width: 315px;
   height: 630px;
-  background-color: red;
+}
+.divThreeStage {
+  width: 315px;
+  height: 35px;
 }
 .threeStage {
+  position: relative;
   width: 100%;
-  height: 35px;
-  background-color: black;
+  height: 100%;
+  background-color: lightgray;
+  border-radius: 40px;
+}
+.threeStageInside {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 105px;
+  height: 100%;
+  color: black;
+}
+
+.threeStageInside:first-child {
+  left: 0;
+}
+.threeStageInside:nth-child(2) {
+  left: 105px;
+}
+.threeStageInside:last-child {
+  left: 210px;
+}
+
+.signup h1 {
+  font-size: 36px;
+  text-align: center;
+  color: white;
+}
+.signup .input-box {
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 40px;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  font-family: "Bebas Neue";
+}
+
+.input-box::placeholder {
+  color: white;
+}
+
+.Stage2,
+.Stage3 {
+  display: none;
 }
